--- a/notebooks/1_training_examples.ipynb
+++ b/notebooks/1_training_examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "007ff5d9",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "8cec7535",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "id": "cae46c75",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "b8f19602",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "0a432683",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "23fff1f8",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "id": "267b7be3",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        "array([0, 1, 2])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "b5f97f2f",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "c53c68e9",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "b93a7bec",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "8b1cdf36",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "3feaeb39",
    "metadata": {},
    "outputs": [],
@@ -284,42 +284,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4add373a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== Model: XGBoost ===\n",
-      "\n",
-      "Testing params: {'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 50}\n",
-      "Mean LOSO-CV score for {'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 50}: 0.5250\n",
-      "\n",
-      "Testing params: {'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 100}\n",
-      "Mean LOSO-CV score for {'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 100}: 0.5250\n",
-      "\n",
-      "Testing params: {'learning_rate': 0.1, 'max_depth': 6, 'n_estimators': 50}\n",
-      "Mean LOSO-CV score for {'learning_rate': 0.1, 'max_depth': 6, 'n_estimators': 50}: 0.5250\n",
-      "\n",
-      "Testing params: {'learning_rate': 0.1, 'max_depth': 6, 'n_estimators': 100}\n",
-      "Mean LOSO-CV score for {'learning_rate': 0.1, 'max_depth': 6, 'n_estimators': 100}: 0.5250\n",
-      "\n",
-      "Testing params: {'learning_rate': 0.01, 'max_depth': 3, 'n_estimators': 50}\n",
-      "Mean LOSO-CV score for {'learning_rate': 0.01, 'max_depth': 3, 'n_estimators': 50}: 0.5472\n",
-      "\n",
-      "Testing params: {'learning_rate': 0.01, 'max_depth': 3, 'n_estimators': 100}\n",
-      "Mean LOSO-CV score for {'learning_rate': 0.01, 'max_depth': 3, 'n_estimators': 100}: 0.5667\n",
-      "\n",
-      "Testing params: {'learning_rate': 0.01, 'max_depth': 6, 'n_estimators': 50}\n",
-      "Mean LOSO-CV score for {'learning_rate': 0.01, 'max_depth': 6, 'n_estimators': 50}: 0.5472\n",
-      "\n",
-      "Testing params: {'learning_rate': 0.01, 'max_depth': 6, 'n_estimators': 100}\n",
-      "Mean LOSO-CV score for {'learning_rate': 0.01, 'max_depth': 6, 'n_estimators': 100}: 0.5667\n",
-      "\n",
-      "=== Model: RF ===\n"
+     "ename": "NameError",
+     "evalue": "name 'models' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 12\u001b[0m\n\u001b[0;32m      8\u001b[0m subject_ids \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP02\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP03\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP04\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP05\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP06\u001b[39m\u001b[38;5;124m'\u001b[39m]   \u001b[38;5;66;03m# or sorted(df_features[\"subject\"].unique())\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# tasks already defined somewhere, e.g.:\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# tasks = sorted(df_features[\"task\"].unique())\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m model_name, (estimator, param_grid) \u001b[38;5;129;01min\u001b[39;00m \u001b[43mmodels\u001b[49m\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m=== Model: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ===\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m model_name \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mXGBoost\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'models' is not defined"
      ]
     }
    ],
@@ -423,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "b8c78134",
    "metadata": {},
    "outputs": [],
@@ -433,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "aa7ee0bf",
    "metadata": {},
    "outputs": [
@@ -686,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "24870762",
    "metadata": {},
    "outputs": [
