notebookwith updated results

--- a/notebooks/3_explore_results.ipynb
+++ b/notebooks/3_explore_results.ipynb
@@ -2025,8 +2025,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "87d5f566",
+   "metadata": {},
+   "source": [
+    "### Results after re-training (script LOSO_Importance_Train)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 117,
    "id": "dfd102de",
    "metadata": {},
    "outputs": [
@@ -2081,6 +2089,9 @@
     "\n",
     "            print(f\"- {task}: \" + \", \".join(parts))\n",
     "\n",
+    "\n",
+    "# folder where you saved perm_* files\n",
+    "SAVE_DIR = r\"C:\\Users\\giusy\\OneDrive\\Desktop\\AI_Healtcare\\IMU-compensatory-movement-detection\\Data\\ModelsFinal\"\n",
     "print_task_metrics_from_mean_std(SAVE_DIR, model_names=(\"LASSO_LR\", \"MLP\"))"
    ]
   },
@@ -2104,7 +2115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 115,
    "id": "ad267e8b",
    "metadata": {},
    "outputs": [
@@ -2112,21 +2123,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "appending\n",
-      "appending\n",
-      "appending\n",
-      "appending\n",
-      "      Model      Metric    all_tasks  cup-placing          peg      pouring  \\\n",
-      "0  LASSO_LR    Accuracy  0.97 ± 0.02  0.98 ± 0.03  0.97 ± 0.04  0.97 ± 0.02   \n",
-      "1  LASSO_LR  F1 (macro)  0.97 ± 0.02  0.98 ± 0.03  0.97 ± 0.04  0.97 ± 0.02   \n",
-      "2       MLP    Accuracy  0.97 ± 0.03  0.98 ± 0.02  0.96 ± 0.05  0.96 ± 0.04   \n",
-      "3       MLP  F1 (macro)  0.97 ± 0.03  0.98 ± 0.01  0.96 ± 0.05  0.96 ± 0.04   \n",
+      "      Model             Metric    all_tasks  cup-placing          peg  \\\n",
+      "0  LASSO_LR           Accuracy  0.97 ± 0.02  0.98 ± 0.03  0.97 ± 0.04   \n",
+      "1  LASSO_LR         F1 (macro)  0.97 ± 0.02  0.98 ± 0.03  0.97 ± 0.04   \n",
+      "2  LASSO_LR  Precision (macro)  0.97 ± 0.02  0.98 ± 0.03  0.97 ± 0.03   \n",
+      "3  LASSO_LR     Recall (macro)  0.97 ± 0.02  0.98 ± 0.03  0.97 ± 0.04   \n",
+      "4  LASSO_LR    ROC-AUC (macro)  1.00 ± 0.01  1.00 ± 0.00  0.99 ± 0.02   \n",
+      "5       MLP           Accuracy  0.97 ± 0.03  0.98 ± 0.02  0.96 ± 0.05   \n",
+      "6       MLP         F1 (macro)  0.97 ± 0.03  0.98 ± 0.01  0.96 ± 0.05   \n",
+      "7       MLP  Precision (macro)  0.97 ± 0.03  0.98 ± 0.01  0.96 ± 0.05   \n",
+      "8       MLP     Recall (macro)  0.97 ± 0.03  0.98 ± 0.01  0.96 ± 0.05   \n",
+      "9       MLP    ROC-AUC (macro)  0.99 ± 0.01  1.00 ± 0.00  0.99 ± 0.02   \n",
       "\n",
-      "        wiping  \n",
-      "0  0.97 ± 0.03  \n",
-      "1  0.97 ± 0.03  \n",
-      "2  0.96 ± 0.04  \n",
-      "3  0.96 ± 0.04  \n",
+      "       pouring       wiping  \n",
+      "0  0.97 ± 0.02  0.97 ± 0.03  \n",
+      "1  0.97 ± 0.02  0.97 ± 0.03  \n",
+      "2  0.97 ± 0.02  0.97 ± 0.03  \n",
+      "3  0.97 ± 0.02  0.97 ± 0.03  \n",
+      "4  1.00 ± 0.00  1.00 ± 0.00  \n",
+      "5  0.96 ± 0.04  0.96 ± 0.04  \n",
+      "6  0.96 ± 0.04  0.96 ± 0.04  \n",
+      "7  0.96 ± 0.04  0.96 ± 0.04  \n",
+      "8  0.96 ± 0.04  0.96 ± 0.04  \n",
+      "9  1.00 ± 0.01  0.99 ± 0.01  \n",
       "\n",
       "\n",
       "--- LaTeX (Overleaf) ---\n",
@@ -2137,8 +2156,14 @@
       "\\midrule\n",
       "LASSO_LR & Accuracy & 0.97 ± 0.02 & 0.98 ± 0.03 & 0.97 ± 0.04 & 0.97 ± 0.02 & 0.97 ± 0.03 \\\\\n",
       "LASSO_LR & F1 (macro) & 0.97 ± 0.02 & 0.98 ± 0.03 & 0.97 ± 0.04 & 0.97 ± 0.02 & 0.97 ± 0.03 \\\\\n",
+      "LASSO_LR & Precision (macro) & 0.97 ± 0.02 & 0.98 ± 0.03 & 0.97 ± 0.03 & 0.97 ± 0.02 & 0.97 ± 0.03 \\\\\n",
+      "LASSO_LR & Recall (macro) & 0.97 ± 0.02 & 0.98 ± 0.03 & 0.97 ± 0.04 & 0.97 ± 0.02 & 0.97 ± 0.03 \\\\\n",
+      "LASSO_LR & ROC-AUC (macro) & 1.00 ± 0.01 & 1.00 ± 0.00 & 0.99 ± 0.02 & 1.00 ± 0.00 & 1.00 ± 0.00 \\\\\n",
       "MLP & Accuracy & 0.97 ± 0.03 & 0.98 ± 0.02 & 0.96 ± 0.05 & 0.96 ± 0.04 & 0.96 ± 0.04 \\\\\n",
       "MLP & F1 (macro) & 0.97 ± 0.03 & 0.98 ± 0.01 & 0.96 ± 0.05 & 0.96 ± 0.04 & 0.96 ± 0.04 \\\\\n",
+      "MLP & Precision (macro) & 0.97 ± 0.03 & 0.98 ± 0.01 & 0.96 ± 0.05 & 0.96 ± 0.04 & 0.96 ± 0.04 \\\\\n",
+      "MLP & Recall (macro) & 0.97 ± 0.03 & 0.98 ± 0.01 & 0.96 ± 0.05 & 0.96 ± 0.04 & 0.96 ± 0.04 \\\\\n",
+      "MLP & ROC-AUC (macro) & 0.99 ± 0.01 & 1.00 ± 0.00 & 0.99 ± 0.02 & 1.00 ± 0.01 & 0.99 ± 0.01 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -2147,31 +2172,104 @@
    ],
    "source": [
     "# Read summary file\n",
-    "\n",
-    "\n",
-    "\n",
-    "models = [\"LASSO_LR\", \"MLP\"] \n",
     "out_root = Path(CONFIG[\"models_folder\"]) / \"Global_CV_Explainability_bestcfg\" / \"metrics\"\n",
-    "f = out_root / f\"metrics_all_tasks_{MODEL_NAME}_best_agg_per_task.csv\"\n",
+    "\n",
+    "# which eval_task columns to show (force consistent ordering)\n",
+    "task_cols_order = [\"all_tasks\", \"cup-placing\", \"peg\", \"pouring\", \"wiping\"]\n",
+    "\n",
+    "# all metrics you saved in the metrics agg csv\n",
+    "metric_cols = [\"accuracy\", \"f1_macro\", \"precision_macro\", \"recall_macro\", \"roc_auc\"]\n",
+    "\n",
+    "metric_name_map = {\n",
+    "    \"accuracy\": \"Accuracy\",\n",
+    "    \"f1_macro\": \"F1 (macro)\",\n",
+    "    \"precision_macro\": \"Precision (macro)\",\n",
+    "    \"recall_macro\": \"Recall (macro)\",\n",
+    "    \"roc_auc\": \"ROC-AUC (macro)\",\n",
+    "}\n",
+    "\n",
+    "def fmt(mu, sd, nd=2):\n",
+    "    if pd.isna(mu) or pd.isna(sd):\n",
+    "        return \"-\"\n",
+    "    return f\"{mu:.{nd}f} ± {sd:.{nd}f}\"\n",
+    "\n",
+    "def read_metrics_agg(path: Path) -> pd.DataFrame:\n",
+    "    df = pd.read_csv(path)\n",
+    "\n",
+    "    # if your aggregation flattened to e.g. accuracy_mean / accuracy_std, keep as is.\n",
+    "    # If someone saved as accuracy__mean, normalize.\n",
+    "    df.columns = [c.replace(\"__\", \"_\") for c in df.columns]\n",
+    "\n",
+    "    # find eval_task column robustly\n",
+    "    if \"eval_task\" in df.columns:\n",
+    "        eval_col = \"eval_task\"\n",
+    "    elif \"eval_task_\" in df.columns:\n",
+    "        eval_col = \"eval_task_\"\n",
+    "        df = df.rename(columns={eval_col: \"eval_task\"})\n",
+    "        eval_col = \"eval_task\"\n",
+    "    else:\n",
+    "        # last-resort: any col containing both eval and task\n",
+    "        cand = [c for c in df.columns if (\"eval\" in c.lower() and \"task\" in c.lower())]\n",
+    "        if not cand:\n",
+    "            raise ValueError(f\"Couldn't find eval_task column in {path.name}. Columns={list(df.columns)}\")\n",
+    "        df = df.rename(columns={cand[0]: \"eval_task\"})\n",
+    "        eval_col = \"eval_task\"\n",
+    "\n",
+    "    return df\n",
     "\n",
     "# ---------------- LOAD + BUILD ONE TABLE ----------------\n",
     "rows = []\n",
+    "all_tasks_seen = set(task_cols_order)\n",
+    "\n",
     "for model in models:\n",
     "    f = out_root / f\"metrics_all_tasks_{model}_best_agg_per_task.csv\"\n",
-    "    df = pd.read_csv(f)\n",
+    "    if not f.exists():\n",
+    "        raise FileNotFoundError(f\"Missing metrics file: {f}\")\n",
     "\n",
-    "    # handle both possible column namings\n",
-    "    eval_col = \"eval_task\"\n",
-    "    tasks = df[\"eval_task\"].unique()\n",
-    "    for m in metrics:\n",
-    "        row = {\"Model\": model, \"Metric\": \"Accuracy\" if m == \"accuracy\" else \"F1 (macro)\"}\n",
+    "    df = read_metrics_agg(f)\n",
+    "\n",
+    "    # tasks present in file\n",
+    "    tasks_found = list(pd.unique(df[\"eval_task\"]))\n",
+    "    # keep your preferred order, but only those present\n",
+    "    tasks = [t for t in task_cols_order if t in tasks_found]\n",
+    "    # append any extras at the end (stable)\n",
+    "    tasks += [t for t in sorted(tasks_found) if t not in tasks]\n",
+    "    all_tasks_seen.update(tasks)\n",
+    "\n",
+    "    for mc in metric_cols:\n",
+    "        row = {\"Model\": model, \"Metric\": metric_name_map.get(mc, mc)}\n",
+    "\n",
     "        for t in tasks:\n",
-    "            r = df[df[eval_col] == t].iloc[0]\n",
-    "            row[t] = fmt(float(r[f\"{m}_mean\"]), float(r[f\"{m}_std\"]), nd=2)\n",
-    "        rows.append(row)\n",
-    "        print(\"appending\")\n",
+    "            sub = df[df[\"eval_task\"] == t]\n",
+    "            if sub.empty:\n",
+    "                row[t] = \"-\"\n",
+    "                continue\n",
     "\n",
-    "table = pd.DataFrame(rows, columns=[\"Model\", \"Metric\"] + list(tasks))\n",
+    "            r = sub.iloc[0]\n",
+    "            mcol = f\"{mc}_mean\"\n",
+    "            scol = f\"{mc}_std\"\n",
+    "\n",
+    "            if mcol not in df.columns:\n",
+    "                # sometimes columns could be like f1_macro_mean_mean (if double-aggregated by mistake)\n",
+    "                alt = [c for c in df.columns if c.startswith(f\"{mc}_mean\")]\n",
+    "                if alt:\n",
+    "                    mcol = alt[0]\n",
+    "                else:\n",
+    "                    row[t] = \"-\"\n",
+    "                    continue\n",
+    "            if scol not in df.columns:\n",
+    "                alt = [c for c in df.columns if c.startswith(f\"{mc}_std\")]\n",
+    "                scol = alt[0] if alt else None\n",
+    "\n",
+    "            mu = float(r[mcol]) if mcol in r.index else np.nan\n",
+    "            sd = float(r[scol]) if (scol is not None and scol in r.index) else np.nan\n",
+    "            row[t] = fmt(mu, sd, nd=2)\n",
+    "\n",
+    "        rows.append(row)\n",
+    "\n",
+    "# final column order (Model/Metric + task columns)\n",
+    "final_tasks = [t for t in task_cols_order if t in all_tasks_seen] + [t for t in sorted(all_tasks_seen) if t not in task_cols_order]\n",
+    "table = pd.DataFrame(rows, columns=[\"Model\", \"Metric\"] + final_tasks)\n",
     "\n",
     "print(table)\n",
     "print(\"\\n\\n--- LaTeX (Overleaf) ---\\n\")\n",
